<resources>
    <string name="app_name">RecipEasy</string>

    //navigation
    <string name="nav_home">HOME</string>
    <string name="nav_recipes">RECIPES</string>
    <string name="nav_pantry">PANTRY</string>
    <string name="nav_profile">PROFILE</string>

    <string class="recipe_icon_title" name="time">Time</string>
    <string class="recipe_icon_title" name="difficulty">Difficulty</string>
    <string class="recipe_icon_title" name="servings">Servings</string>
    <string class="recipe_icon_title" name="add_to_shop">Add to\nshop</string>
    <string name="channel_name">Daily Recipe</string>
    <string name="channel_description">test2</string>

    //other
    <string name="filter">filter</string>
    <string name="filter_capitals">FILTER</string>
    <string name="shop">Shop</string>
    <string name="back">back</string>
    <string name="shopping_list">Shopping list</string>
    <string name="result">Result</string>

    <string name="empty"></string>
    <string name="easy">easy</string>
    <string name="only">ONLY</string>
    <string name="no">NO</string>
    <string name="dropdown">Dropdown</string>
    <string name="done">Done</string>
    <string name="amount">Amount</string>
    <string name="recipes_with_ingredients">Recipes with your pantry ingredients</string>
    <string name="select_image">Select Image</string>
    <string name="main_ingredient">Main ingredient</string>
    <string name="save_pantry_items">Save Pantry Items</string>
    <string name="add_pantry_items">Add Pantry Items</string>
    <string name="add_to_calender">Add to Calender</string>
    <string name="share_recipe">Share Recipe Using: </string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>



    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>

</resources>
