...

    shop: List<ShopArticle>) {
    Column(
        modifier = Modifier.fillMaxSize(),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        SecondHeader(title = "Shopping List", onBackClicked = navigateBack)
        ShopIcons()
        ShopArticles(shop = shop)
    }
}

@Composable
...
